--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <<!DOCTYPE html>
+
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +8,7 @@
     <title>GItの勉強</title>
 </head>
 <body>
-    <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+	<h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+	<p>この変更はmasterブランチで追加されました</p>
 </body>
 </html>
